[package]
name = "repos"
version = "0.1.0"
authors = ["jasilven <jasilven@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
dotenv = "0.15.0"
reqwest = { version = "0.10.8", features = ["json"] }
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
tokio = { version = "0.2", features = ["full"] }
